# fsort

./: .clang-format  .gitignore  .gitmodules  Annealing.cpp  CMakeLists.txt  CallGraph.cpp  CallGraph.h  FReorder.cpp  FReorder.h  NMParser.cpp  NMParser.h  PerfParser.cpp  PerfParser.h  Readme.md  build_cc1plus.sh  build_gcc.sh  main.cpp
CG/: CMakeLists.txt  NMParser.cpp  gen-cg.cpp
CG/example/: mmaps  raw_data
benchmarks/: Readme.md  show_hist.py  tramp3d-v4.cpp
patched-gcc/: 12-gcc-reorder.p  freorder-ipa.patch  lto-gcc.patch
patches/: gcc-12.2.0.patch
reorder-plugin/: Makefile  freorder-ipa.cpp
results/: bolt_rnd.txt  fsort_no_rnd.txt  fsort_report.txt
scripts/: PSP.py  build_cc1plus.sh  build_gcc-12.sh  generate_heatmaps.sh  generate_hist.sh  show_results.py
